--- a/Intern/lstm.ipynb
+++ b/Intern/lstm.ipynb
@@ -203,7 +203,7 @@
    "source": [
     "import pandas as pd\n",
     "data = pd.read_csv('paths(events).csv')\n",
-    "data"
+    "data\n"
    ]
   },
   {
